<resources>
    <string name="app_name">Fruit_Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="warehouse">Warehouse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_order">my_order</string>
    <string name="revenue">revenue</string>
    <string name="my_cart">my_cart</string>
    <string name="bill">Bill</string>
    <string name="chợ">Chợ</string>
    <string name="thông_tin_cá_nhân">Thông Tin Cá Nhân</string>
    <string name="kho">Kho</string>
    <string name="hóa_đơn">Hóa Đơn</string>
    <string name="giỏ_hàng">Giỏ Hàng</string>
    <string name="trang_chủ">Trang Chủ</string>

    <string-array name="unit_array">
        <item>Kg</item>
        <item>Quả</item>
        <item>Hộp</item>
    </string-array>

</resources>