<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fruit_store.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.fruit_store.ui.Profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_warehouse"
        android:name="com.example.fruit_store.ui.Warehouse.WarehouseFragment"
        android:label="@string/warehouse"
        tools:layout="@layout/fragment_warehouse" />
    <fragment
        android:id="@+id/nav_revenue"
        android:name="com.example.fruit_store.ui.Revenue.RevenueFragment"
        android:label="@string/revenue"
        tools:layout="@layout/fragment_revenue" />
    <fragment
        android:id="@+id/nav_my_order"
        android:name="com.example.fruit_store.ui.MyOrder.MyOrderFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_order" />

</navigation>